Research evaluation framework and K=64 high-precision support
  Major release adding comprehensive research evaluation infrastructure and
  K=64 high-precision mode for PhD portfolio benchmarking.

  ARCHITECTURE CHANGES:
  - Flatten HNSW to NSW (single-layer graph) for simpler analysis
  - Remove LayerLevel hierarchy, simplify graph operations
  - Add CPHNSWIndex64 type alias for K=64 high precision

  K-VARIANT SUPPORT:
  - Add compile-time K selection via EVAL_K macro (16/32/64)
  - Build system generates eval_master_k16, eval_master_k32, eval_master_k64
  - Each variant is optimally compiled for its code width

  SIMD OPTIMIZATIONS:
  - Add K=64 AVX-512 asymmetric distance specialization
  - Add SoA transposed layout for batch SIMD distance computation
  - 4x loop unrolling for improved instruction-level parallelism

  GPU ACCELERATION:
  - Add CUDA k-NN graph construction kernel (gpu_knn_graph.cu)
  - cuBLAS-accelerated distance matrix computation
  - Support for H100/A100/V100 architectures

  EVALUATION FRAMEWORK:
  - Master evaluation script (run_full_evaluation.sh)
  - K-variants test suite (test_k_variants.cpp)
  - QA protocol for regression testing (qa_protocol.cpp)
  - Debug utilities for estimator, recall, code storage analysis

  BENCHMARK RESULTS (SIFT-1M, 52-core Xeon Platinum 8480+):
  - K=64 achieves 82.6% recall@10 with rerank_k=200
  - K=32 achieves 68.6% recall@10, 15.5K QPS peak
  - K=16 achieves 46.6% recall@10, 18.2K QPS peak
  - 2.8x memory compression vs Faiss HNSW (481 MB vs 1.34 GB)
  - 17.7x parallel speedup at 52 threads (38K vectors/sec)
  - Pearson r=0.9715 distance estimator correlation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ endif()
 if(CPHNSW_USE_CUDA)
     add_library(cphnsw_cuda STATIC
         src/cuda/gpu_encoder.cu
+        src/cuda/gpu_knn_graph.cu
     )
     target_include_directories(cphnsw_cuda PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -105,6 +106,7 @@ if(CPHNSW_USE_CUDA)
         CUDA::cudart
         CUDA::cublas
     )
+    target_compile_definitions(cphnsw_cuda PUBLIC CPHNSW_USE_CUDA=1)
     set_target_properties(cphnsw_cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON
         POSITION_INDEPENDENT_CODE ON
@@ -176,6 +178,39 @@ if(CPHNSW_BUILD_EVAL)
         ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
     )
 
+    # K-specific eval_master variants for Research Evaluation
+    foreach(K_VAL 16 32 64)
+        add_executable(eval_master_k${K_VAL}
+            evaluation/eval_master.cpp
+        )
+        target_compile_definitions(eval_master_k${K_VAL} PRIVATE EVAL_K=${K_VAL})
+        target_link_libraries(eval_master_k${K_VAL} PRIVATE cphnsw)
+        target_include_directories(eval_master_k${K_VAL} PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+    endforeach()
+
+    # QA Protocol test suite
+    add_executable(qa_protocol
+        evaluation/qa_protocol.cpp
+    )
+    target_link_libraries(qa_protocol PRIVATE cphnsw)
+    target_include_directories(qa_protocol PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+    )
+
+    # CP Estimator Debug
+    add_executable(debug_estimator
+        evaluation/debug_estimator.cpp
+    )
+    target_link_libraries(debug_estimator PRIVATE cphnsw)
+    target_include_directories(debug_estimator PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+    )
+
     # GPU evaluation (SIFT-1M with CUDA acceleration)
     if(CPHNSW_USE_CUDA)
         add_executable(eval_sift_gpu
@@ -183,6 +218,56 @@ if(CPHNSW_BUILD_EVAL)
         )
         target_link_libraries(eval_sift_gpu PRIVATE cphnsw cphnsw_cuda)
         target_include_directories(eval_sift_gpu PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # GPU k-NN Build test
+        add_executable(test_gpu_build
+            evaluation/test_gpu_build.cpp
+        )
+        target_link_libraries(test_gpu_build PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(test_gpu_build PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # GPU k-NN Debug
+        add_executable(debug_gpu_knn
+            evaluation/debug_gpu_knn.cpp
+        )
+        target_link_libraries(debug_gpu_knn PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(debug_gpu_knn PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # Code Storage Debug
+        add_executable(debug_code_storage
+            evaluation/debug_code_storage.cpp
+        )
+        target_link_libraries(debug_code_storage PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(debug_code_storage PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # Recall Debug
+        add_executable(debug_recall
+            evaluation/debug_recall.cpp
+        )
+        target_link_libraries(debug_recall PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(debug_recall PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # K Value Variants Test
+        add_executable(test_k_variants
+            evaluation/test_k_variants.cpp
+        )
+        target_link_libraries(test_k_variants PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(test_k_variants PRIVATE
             ${CMAKE_CURRENT_SOURCE_DIR}/include
             ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
         )
