CRITICAL FIXES (P0):   - Fix recall@k denominator bug: divide by k, not gt_set.size()   - Remove fabricated ablation data from eval_master.cpp (CP_Asymmetric/Symmetric)   - Fix CPCode::encode silent overflow: now throws std::overflow_error
  HIGH-PRIORITY FIXES (P1):
  - Add GPU k bounds check in gpu_search.cu (k <= 64 validation)
  - Verify NaN guards in finger_calibration.hpp and aitq_quantizer.hpp

  REPRODUCIBILITY FIXES (P2):
  - Implement Modified Gram-Schmidt with re-orthogonalization ("twice is enough")
  - Add complete serialization API for CPHNSWIndex and FlatHNSWGraph
    - Binary format with magic number validation (CPHX/CPHW)
    - Version checking for forward compatibility
    - Saves: params, graph, codes, neighbor blocks, vectors, calibration

  NEW FEATURES:
  - GPU-accelerated batch search using cuBLAS SGEMM
  - K-specific GPU benchmark variants (K=16, 32, 64)
  - Ground truth recomputation for cosine similarity (fixes metric mismatch)
  - GPU mode detection in eval_master experiments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ if(CPHNSW_USE_CUDA)
     add_library(cphnsw_cuda STATIC
         src/cuda/gpu_encoder.cu
         src/cuda/gpu_knn_graph.cu
+        src/cuda/gpu_search.cu
     )
     target_include_directories(cphnsw_cuda PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -177,6 +178,10 @@ if(CPHNSW_BUILD_EVAL)
         ${CMAKE_CURRENT_SOURCE_DIR}/include
         ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
     )
+    if(CPHNSW_USE_CUDA)
+        target_link_libraries(eval_master PRIVATE cphnsw_cuda)
+        target_compile_definitions(eval_master PRIVATE CPHNSW_USE_CUDA=1)
+    endif()
 
     # K-specific eval_master variants for Research Evaluation
     foreach(K_VAL 16 32 64)
@@ -189,6 +194,10 @@ if(CPHNSW_BUILD_EVAL)
             ${CMAKE_CURRENT_SOURCE_DIR}/include
             ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
         )
+        if(CPHNSW_USE_CUDA)
+            target_link_libraries(eval_master_k${K_VAL} PRIVATE cphnsw_cuda)
+            target_compile_definitions(eval_master_k${K_VAL} PRIVATE CPHNSW_USE_CUDA=1)
+        endif()
     endforeach()
 
     # QA Protocol test suite
@@ -241,6 +250,29 @@ if(CPHNSW_BUILD_EVAL)
             ${CMAKE_CURRENT_SOURCE_DIR}/include
             ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
         )
+
+        # GPU-accelerated Benchmark (2x H100)
+        add_executable(eval_gpu_benchmark
+            evaluation/eval_gpu_benchmark.cpp
+        )
+        target_link_libraries(eval_gpu_benchmark PRIVATE cphnsw cphnsw_cuda)
+        target_include_directories(eval_gpu_benchmark PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+        )
+
+        # K-specific GPU benchmark variants
+        foreach(K_VAL 16 32 64)
+            add_executable(eval_gpu_benchmark_k${K_VAL}
+                evaluation/eval_gpu_benchmark.cpp
+            )
+            target_compile_definitions(eval_gpu_benchmark_k${K_VAL} PRIVATE EVAL_K=${K_VAL})
+            target_link_libraries(eval_gpu_benchmark_k${K_VAL} PRIVATE cphnsw cphnsw_cuda)
+            target_include_directories(eval_gpu_benchmark_k${K_VAL} PRIVATE
+                ${CMAKE_CURRENT_SOURCE_DIR}/include
+                ${CMAKE_CURRENT_SOURCE_DIR}/evaluation
+            )
+        endforeach()
 
         # Code Storage Debug
         add_executable(debug_code_storage
