Add Python packaging and enhance .gitignore configuration
  - Add pyproject.toml with dependencies (numpy, pandas, matplotlib)
    and optional faiss-cpu for baseline comparisons
  - Add requirements.txt for pip compatibility
  - Add __init__.py files to make evaluation scripts importable
  - Expand .gitignore with comprehensive patterns:
    - Python virtual environments (.venv/, venv/, __pycache__/)
    - Large data files (*.fvecs, *.ivecs, *.bvecs, *.npy, *.h5)
    - Build artifacts (*.o, *.a, *.so, cmake-build-*/)
    - IDE files (.idea/, .vscode/, .DS_Store)
    - Secrets and credentials (.env, *.pem, *.key)
  - Remove CLAUDE.md from version control (now gitignored)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,117 @@
-cp-hnsw/evaluation/data/
+# =============================================================================
+# Build artifacts
+# =============================================================================
 build/
+cmake-build-*/
+*.o
+*.a
+*.so
+*.dylib
+
+# =============================================================================
+# Python virtual environment
+# =============================================================================
+.venv/
+venv/
+env/
+ENV/
+.python-version
+
+# Python bytecode
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+*.pyd
+
+# Python packaging
+*.egg
+*.egg-info/
+dist/
+wheels/
+*.whl
+.eggs/
+
+# =============================================================================
+# Claude Code configuration (local, not tracked)
+# =============================================================================
+CLAUDE.md
+
+# =============================================================================
+# Data files and directories
+# =============================================================================
+# Evaluation data directories
 evaluation/data/
+cp-hnsw/evaluation/data/
+
+# Dataset files (large binary formats)
+*.fvecs
+*.ivecs
+*.bvecs
+*.bin
+*.npy
+*.npz
+
+# HDF5 files
+*.h5
+*.hdf5
+
+# Compressed datasets
+*.tar
+*.tar.gz
+*.tgz
+*.tar.bz2
+*.zip
+*.7z
+*.rar
+
+# CSV data (can be large)
+*.csv
+!evaluation/results/*.csv
+
+# Parquet files
+*.parquet
+
+# =============================================================================
+# Results and outputs (optional - uncomment to ignore)
+# =============================================================================
+# evaluation/results/
+# *.pdf
+# *.png
+
+# =============================================================================
+# IDE and editor files
+# =============================================================================
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# =============================================================================
+# Temporary and cache files
+# =============================================================================
+*.tmp
+*.temp
+*.cache
+.cache/
+*.log
+
+# Test and coverage
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+.nox/
+
+# =============================================================================
+# Secrets and credentials (safety)
+# =============================================================================
+.env
+.env.*
+*.pem
+*.key
+secrets.json
+credentials.json
