Implement Phase 1 (RaBitQ) and Phase 2 (Residual Quantization) optimizations
  Phase 1 - RaBitQ Bitwise Distance:
  - Add BinaryCode<K> and RaBitQQuery<K> types for symmetric Hamming
  - Implement rabitq_hamming_* functions with AVX-512/AVX2/scalar paths
  - Add RaBitQSearchLayer<K> for XOR + PopCount graph navigation
  - Replace SIMD Gather (10-11 cycles) with XOR+PopCount (1-2 cycles)

  Phase 2 - Residual Quantization:
  - Add ResidualBinaryCode<K,R>, ResidualQuery<K,R>, ResidualWeighting<Shift>
  - Create ResidualCPEncoder with reconstruction-based residual encoding
  - Implement residual_distance_integer_scalar with bit-shift weighting
  - Add ResidualNeighborBlock<K,R> with SoA transposed storage for SIMD
  - Create ResidualSearchLayer<K,R,Shift> for NSW graph traversal
  - Add ResidualCPHNSWIndex<K,R,Shift> as full index wrapper

  Verification & Testing:
  - test_rabitq_distance.cpp: Phase 1 unit tests
  - test_residual_distance.cpp: Phase 2 unit tests (8 tests, all pass)
  - test_go_nogo_verification.cpp: Comprehensive checklist
    - Throughput: 28,605 M distances/sec
    - Correlation R² = 0.84 on diverse distance pairs
  - test_recall_diagnostic.cpp: Recall collapse debugging
  - test_phase2_integration.cpp: Phase 1 vs Phase 2 comparison

  Documentation:
  - Add CLAUDE.md with optimization phases, implementation status,
    and critical random data limitation documentation
  - Document concentration of measure issue on synthetic data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,6 +292,60 @@ if(CPHNSW_BUILD_TESTS)
     else()
         message(STATUS "GTest not found, skipping tests")
     endif()
+
+    # Standalone test executables (no GTest dependency)
+    add_executable(test_flash_kernels
+        tests/unit/test_flash_kernels.cpp
+    )
+    target_link_libraries(test_flash_kernels PRIVATE cphnsw)
+    target_include_directories(test_flash_kernels PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    # RaBitQ Phase 1 unit tests
+    add_executable(test_rabitq_distance
+        tests/unit/test_rabitq_distance.cpp
+    )
+    target_link_libraries(test_rabitq_distance PRIVATE cphnsw)
+    target_include_directories(test_rabitq_distance PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    # Residual Quantization Phase 2 unit tests
+    add_executable(test_residual_distance
+        tests/unit/test_residual_distance.cpp
+    )
+    target_link_libraries(test_residual_distance PRIVATE cphnsw)
+    target_include_directories(test_residual_distance PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    # Go/No-Go Verification (Phase 1 & 2 comprehensive check)
+    add_executable(test_go_nogo_verification
+        tests/unit/test_go_nogo_verification.cpp
+    )
+    target_link_libraries(test_go_nogo_verification PRIVATE cphnsw)
+    target_include_directories(test_go_nogo_verification PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    # Recall Diagnostic (debug recall collapse)
+    add_executable(test_recall_diagnostic
+        tests/unit/test_recall_diagnostic.cpp
+    )
+    target_link_libraries(test_recall_diagnostic PRIVATE cphnsw)
+    target_include_directories(test_recall_diagnostic PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    # Phase 2 Integration Test (compare P1 vs P2 recall)
+    add_executable(test_phase2_integration
+        tests/unit/test_phase2_integration.cpp
+    )
+    target_link_libraries(test_phase2_integration PRIVATE cphnsw)
+    target_include_directories(test_phase2_integration PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
 endif()
 
 # Benchmarks
